--- a/w3_theband/assest/style.css
+++ b/w3_theband/assest/style.css
@@ -14,6 +14,24 @@
 #main{
 
 }
+/* common */
+.row {
+    margin-left: -8px;
+    margin-right: -8px;
+
+}
+.col{
+    float: left;
+    padding-left: 8px;
+    padding-right: 8px;
+}
+.col-half{
+    width: 50%;
+}
+.col-third{
+    width: 33.333%;
+}
+
 #hearder{
     position: fixed;
     height: 46px;
@@ -219,15 +237,10 @@
 }
 .place-list{
     color: var(--black-color);
-    margin: 32px -8px 0;
+    margin-top: 32px;   
+    margin-bottom: 48px;
 }
-.place-item{
-    float: left;
-    width: 33.33%;
-    padding: 0 8px;
-    text-align: left;
-    
-}
+
 .clear{
     content: "";
     clear: both;
@@ -270,8 +283,40 @@
     cursor: pointer;
     opacity: 0.8;
 }
-
+#content-section{
+    /* display: inline-block; */
+}
+.action{
+    /* display: inline-flex; */
+}
+.contact-content{
+    
+}
+.contact-info{
+    font-size: 18px;
+    line-height: 1.4;
+}
+.contact-info i[class*="fa-"]{
+    width: 30px;
+}
 /* end content */
+.contact-form{
+    font-size: 15px;
+    display: inline-block;
+
+}
+.contact-form .form-control{
+    padding: 4px;
+    width: 100%;
+}
+/* End content */
+.map-section{
+    margin: 20px 0;
+    padding-top: 20px;
+}
+.map-section img{
+    width: 100%;
+}
 #footer{
 
 }
