--- a/Restautrant/design/style.css
+++ b/Restautrant/design/style.css
@@ -207,5 +207,16 @@ hr{
 
 }
 #footer{
-
+    background-color: #f1f1f1;
+    width: 100%;
+    height: 117px;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    padding: 32px 0;
+    
+}
+#footer .footer-css{
+    font-size: 15px;
+    
 }
