--- a/theband/design/style.css
+++ b/theband/design/style.css
@@ -21,8 +21,7 @@ html{
 }
 #header .header-nav{
     display: flex;
-   
-    
+
 }
 #header .header-nav li{
     list-style-type: none;
@@ -95,17 +94,256 @@ html{
     text-decoration: none;
 }
 
-
-
-
-
+/* Slider */
 #slider{
-    height: 2000px;
+    /* width: 100%;
+    height: 100%; */
     /* background-color: #ccc; */
+    position: relative;
 }
-#content{
+#slider .img-slider img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+#slider .slider-text{
+    position: absolute;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /* top: 26rem; */
+    color: #fff;
+    margin: auto;
+    bottom: 8rem;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+}
+#content .content-section{
+    width: 800px;
+    padding: 64px 16px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.content-section .conten-section-heading,
+.content-section .content-opacity{
+    text-align: center;
+}
+.content-section .conten-section-heading{
+    font-size: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    letter-spacing: 4px;
+    margin: 10px 0;
+    font-weight: 400;
+}
+.content-section .content-opacity{
+    margin: 15px 0;
+    font-size: 15px;
+    line-height: 1.5;
+    opacity: 0.6;
+    font-family: 'Times New Roman', Times, serif;
+}
+.content-section .content-details{
+    text-align: justify;
+    line-height: 22.5px;
+    font-size: 15px;
+    margin: 15px 0;
+}
+.content-member {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    padding: 32px 0;
+}
+.content-member .member-list{
+    display: block;
+}
+.content-member .member-list img{
+    width: 9.6rem;
+    height: 100%;
+    object-fit: cover;
+    /* filter: drop-shadow(0 0 5px white); */
+    border-radius: 5px;
+}
+.content-member .member-list-name{
+    margin-bottom: 15px;
+}
+/* Tour date */
+.content-tourdate{
+    background-color: #000;
+}
+.content-tourdate .content-section{
+    color: #fff;
+    text-align: center;
+}
+.content-tourdate-heading{
+    margin-bottom: 25px;
+    letter-spacing: 4px;
+}
+.content-tourdate-text{
+    margin-bottom: 25px;
+}
+.content-tourdate-form{
+    background-color: #fff;
+    text-align: left;
+    font-family: "lato";
     
 }
-#footer{
+.content-tourdate-form li{
+    padding: 10px 16px;
+    list-style-type: none;
+    border-bottom: 1px solid #ddd;
+    color: #757575;
+    line-height: 1.5;
+    font-size: 15px;
+}
+.sold-out{
+    color: #fff;
+    line-height: 1.5;
+    padding: 3px 8px;
+    background-color: #f44336;
+    margin-left: 15px;
+    font-size: 15px;
+}
+.content-toudate-place{
+    justify-content: space-between;
+}
+.content-ticket-number{
+    float: right;
+    margin-right: 16px;
+    background-color: #000;
+    color: var(--text-color);
+    padding-left: 8px;
+    padding-right: 8px;
+    border-radius: 50%;
+}
+.content-tourdate-place{
+    display: flex;
+    justify-content: space-evenly;
+    text-align: left;
+    padding: 32px 8px;
+    color: #000;
+    margin: 0 -22px;
+}
+.place-img{
+    width: 15.313rem;
+   
+
+}
+.place-img img{
+    width: 100%;
+    /* height: 183px; */
+}
+.place-img-newyork{
+}
+.place-img-text{
+    font-size: 15px;
+    line-height: 1.5;
+    background-color: #fff;
+    text-align: left;
+    padding: 0.01em 16px;
+
+}
+.places{
+    margin: 15px 0;
+
+}
+.place-time{
+    margin: 15px 0;
+    color: #757575;
+
+}
+.placed-details{
+    margin: 15px 0;
+
+}
+.btn-buyticket{
+    background-color: #000;
+    color: var(--text-color);
+    font-weight: 500;
+    font-size: 15px;
+    margin-bottom: 16px;
+    border: none;
     
+    padding: 10px 16px;
+}
+.btn-buyticket:hover{
+    background-color: #ccc;
+    color: #000;
+    cursor: pointer;
+}
+/* contact */
+.content-section .content-contact{
+    
+}
+.content-contact{
+    
+}
+.contact-heading{
+    text-align: center;
+    margin: 10px 0;
+    letter-spacing: 4px;
+    font-weight: 500;
+}
+.fan-adropnote{
+    text-align: center;
+    margin: 15px 0;
+    color: #757575;
+}
+.contact-info-main{
+    padding: 32px 0;
+    display: flex;
+}
+.contact-info{
+   flex: 1;
+   font-size: px;
+}
+/* icon-contact */
+.fa-solid{
+    margin: 5px 0;
+}
+.fa-solid::before{
+    margin-right: 15px;
+
+}
+.form-contact{
+    flex: 1;
+   
+}
+.name-email{
+    
+    display: flex;
+    justify-content: space-between;
+}
+.form-contact input{
+    padding: 8px 8px;
+    line-height: 22.5px;
+
+
+}
+.form-contact .name{
+    /* margin-left: 15px; */
+}
+.form-contact .message{
+    margin-top: 10px;
+    width: 100%;
+    padding: 8px 8px;
+}
+#content .background-img img{
+    width: 100%;
+   
+    object-fit: contain;
+}
+#footer {
+    text-align: center;
+    padding: 64px 16px;
+
+}
+#footer .footer-icon i{
+    font-size: 25px;
+    margin: 0 5px;
+    color: #757575;
+    cursor: pointer;
+}
+.author-text{
+    font-size: 15px;
+    margin: 15px 0;
 }
