--- a/Architest/design/style.css
+++ b/Architest/design/style.css
@@ -8,13 +8,16 @@ html{
     line-height: 1.5;
 }
 #header{
+    position: fixed;
+    top: 0;
     width: 100%;
     height: 54.5px;
     background-color: #fff;
     padding: 8px 16px;
     display: flex;
     justify-content: space-between;
-
+    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+    z-index: 1;
 }
 #header .header-top a{
     text-decoration: none;
@@ -26,6 +29,7 @@ html{
 #header .header-top:hover{
     background-color: #ccc;
     cursor: pointer;
+    border-radius: 4px;
 
 }
 #header ul{
@@ -39,12 +43,86 @@ html{
 #header ul li:hover{
     background-color: #ccc;
     cursor: pointer;
-}
-#slider{
+    border-radius: 4px;
 
+}
+/* End Header */
+#slider{
+    position: relative;
+   
+
+    
+}
+
+#slider .img-slider img{
+    width: 100%;
+    object-fit: contain;
+}
+#slider .slogan{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    display: flex;
+    align-items: center;
+    color: #fff;
+    height: 46px;
+}
+#slider .slogan .bold{
+    padding: 8px 16px;
+    line-height: 46px;
+    background-color: #000;
+    opacity: 0.75;
+    margin-right: 10px;
+}
+#slider .slogan h1{
+    line-height: 46px;
+    padding: 8px 0; 
 }
 #content{
+    padding: 8px 16px;
+}
+#content .project{
+    margin: 10px 0;
+    padding: 32px 16px;
+    /* border-bottom: 1px solid #ccc; */
+    
 
+}
+#content .list-projects{
+    padding: 0 8px;
+    display: grid;
+    grid-template-columns: 352px 352px 352px 352px;
+    grid-template-rows: 234px 234px;
+    column-gap: 1rem;
+    row-gap: 1rem;
+    justify-content: center;
+}
+#content .list-projects img{
+    max-width: 100%;
+}
+#content .list-projects .list-item{
+    position: relative;
+
+}
+.list-projects .list-item .name-item{
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 8px 16px;
+    background-color: #000;
+    color: #fff;
+}
+#content .about{
+    padding: 16px 0;
+}
+#content .about .project h3{
+    padding: 16px 0;
+    border-bottom: 1px solid #ccc;
+    margin: 10px 0;
+}
+#content .about .project p{
+    margin: 15px 0;
 }
 #footer{
 
