--- a/Architest/design/style.css
+++ b/Architest/design/style.css
@@ -6,6 +6,8 @@
 html{
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.5;
+    
+
 }
 #header{
     position: fixed;
@@ -151,8 +153,6 @@ html{
     padding: 0 !important;
     background-color: #f1f1f1;
     font-weight: 500;
-
-
 }
 .btn-contact:hover{
     background-color: #ccc;
@@ -166,11 +166,67 @@ html{
     padding: 8px 16px;
     color: #000;
     font-weight: 400;
-
 }
 
+#content .contact-infomation{
+    padding: 32px 16px;
+    
+}
+.contact-infomation h3{
+    margin: 10px 0;
+    padding: 16px 0;
+}
+.contact-infomation hr{
+    opacity: 0.5;
+}
+.contact-infomation p{
+    margin: 15px 0;
+}
+.contact-infomation form input{
+    display: block;
+    padding: 8px 8px;
+    margin: 16px 0;
+    width: 100%;
+    height: 40px;
+}
+.contact-infomation .sendmessage{
+    margin: 4px 0;
+    padding: 12px 16px;
+    border: none;
+    background-color: #000;
+    color: #fff;
+    font-weight: 400;
+    float: right;
+}
 
-
+.contact-infomation .sendmessage:hover{
+    cursor: pointer;
+    background-color: #ccc;
+    color: #000;
+}
+.clear{
+    content: "";
+    clear: both;
+}
+#content .container-img{
+    max-width: 100%;
+    padding: 0 16px;
+}
+#content .container-img img{
+    width: 100%;
+}
 #footer{
+    padding: 16px;
+    background-color: #000;
+    height: 68px;
+    text-align: center;
+}
+#footer .author{
+    color: #fff;
+    font-size: 15px;
+    line-height: 34px;
 
+}
+#footer .author a{
+    color: #fff;
 }
